infrastructre/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app 
  template:
    metadata:
      labels:
        app: client-app 
    spec:
      containers:
        - name: client-app 
          image: client-app 
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: client-app-srv
spec:
  selector:
    app: client-app
  type: ClusterIP
  ports:
    - name: client-app
      protocol: TCP
      port: 3000
      targetPort: 3000
