infrastructre/k8s/node-port-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-srv 
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: node-port-srv
      protocol: TCP
      port: 4001
      targetPort: 4001
