infrastructre/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service-depl-srv
                port:
                 number: 4003 
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-app-srv
                port:
                  number: 3000
          - path: /posts/create
            pathType: Prefix 
            backend: 
              service:
                name: posts-depl-srv
                port: 
                  number: 4001
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: query-service-depl-srv
                port:
                 number: 4003
          - path: /events/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: query-service-depl-srv
                port:
                  number: 4003
          - path: /posts/?(.*)/comments/create
            pathType: Prefix
            backend:
              service:
                name: comments-depl-srv
                port:
                  number: 4002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-app-srv
                port:
                  number: 3000
